--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "submodules/coffee-mode"]
 	path = submodules/coffee-mode
 	url = git://github.com/defunkt/coffee-mode.git
+[submodule "submodules/yaml-mode"]
+	path = submodules/yaml-mode
+	url = git://github.com/yoshiki/yaml-mode.git
