--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "submodules/ace-jump-mode"]
 	path = submodules/ace-jump-mode
 	url = git://github.com/winterTTr/ace-jump-mode.git
+[submodule "submodules/fill-column-indicator"]
+	path = submodules/fill-column-indicator
+	url = git://github.com/alpaker/Fill-Column-Indicator.git
