--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "submodules/markdown-mode"]
 	path = submodules/markdown-mode
 	url = git://github.com/defunkt/markdown-mode.git
+[submodule "submodules/rinari"]
+	path = submodules/rinari
+	url = git://github.com/eschulte/rinari.git
